# HSI-SYSTEM

./: .gitignore  README.md  changelog.txt
Doc/: cline-config.txt  note.txt  prompt-inference.md  prompt-server.md  prompt-web.md  prompt.txt  redis.txt
Inference/: config.py  main.py  metadata_reader.py  pyproject.toml
Inference/config/: __init__.py  postgres_config.py  redis_config.py  settings.py
Inference/core/: dependencies.py
Inference/handlers/: gt_load_handler.py  hsi_inference_handler.py  hsi_load_handler.py  hsi_pca_handler.py
Inference/models/: result.py  task.py
Inference/service/: mat_service.py  result_service.py  vector_service.py
Inference/test/: bin_read_test.py  config_test.py  gt_load_test.py  hsi_load_test.py  result_push_test.py
Server/: .gitignore  build.gradle.kts
Server/src/main/resources/: application.properties  keys-example.properties
Web/: package-lock.json  package.json  vite.config.ts
Web/src/: App.css  App.tsx  index.css
Web/src/components/: GtFileUpload.tsx  HsiFileUpload.tsx  HsiViewer.tsx  ImageViewer.tsx  PcaPointCloudViewer.tsx  SpectralStatsChart.tsx
Web/src/contexts/: ThemeContext.tsx
Web/src/layouts/: MainLayout.tsx
Web/src/pages/: DatasetsPage.tsx  GroundTruthPage.tsx  GroundTruthViewerPage.tsx  HomePage.tsx  HsiManagePage.tsx  HyperspectralAnalysisPage.tsx  InferencePage.tsx  ViewerPage.tsx
Web/src/services/: datasetService.ts  groundTruthService.ts  hsiLoader.ts  inferenceService.ts  pcaService.ts
Web/src/types/: dataset.ts  groundTruth.ts  hsi.ts  inference.ts  pca.ts
(+120 files in other folders)
