[project]
name = "inference"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.15.1",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.13.1",
    "redis>=5.0.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
]
