[project]
name = "inference"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.15.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.13.1",
    "redis>=5.0.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
]
